# Secure-DSL-Compiler-for-RBAC-ABAC-Policy-Verification

./: .gitignore  CUSTOM_TEST_FILES.md  IMPLEMENTATION_SUMMARY.md  PROJECT_REPORT.md  QUICKSTART.sh  README.md  VERIFICATION_CHECKLIST.md  folder_structure.md
policy-dsl-compiler/: CMakeLists.txt  TEST_RESULTS.md
policy-dsl-compiler/.cph/: .A_Divisible_Permutation.cpp_4e5961b59a3fafc5380a0e6ccfdfdfe4.prob
policy-dsl-compiler/examples/sample_policies/: comprehensive.pol  ecommerce.pol  healthcare.pol  priv.pol  role_hierarchy.pol  sample2.pol  sample3.pol  test2_hospital.pol  test3_hierarchy.pol
policy-dsl-compiler/frontend/: app.js  index.html  server.py  style.css
policy-dsl-compiler/include/codegen/: MatrixGenerator.h
policy-dsl-compiler/include/lexer/: Token.h
policy-dsl-compiler/include/utils/: Error.h
policy-dsl-compiler/src/lexer/: Lexer.cpp  (+1 more)
policy-dsl-compiler/tests/: test_lexer.cpp  test_parser.cpp
temp/WEEK 7/: parser_tests
temp/WEEK 8/policy-dsl-compiler/: CMakeLists.txt  README.md
temp/WEEK 8/policy-dsl-compiler/examples/sample_policies/: minimal.pol  sample1.pol  simple_rbac.pol  test1_simple.pol
temp/WEEK 8/policy-dsl-compiler/include/analyzer/: ConflictDetector.h
temp/WEEK 8/policy-dsl-compiler/include/codegen/: AccessMatrix.h
temp/WEEK 8/policy-dsl-compiler/include/lexer/: Lexer.h
temp/WEEK 8/policy-dsl-compiler/include/utils/: JsonOutput.h
temp/WEEK 8/policy-dsl-compiler/src/: main.cpp
temp/WEEK 8/policy-dsl-compiler/src/lexer/: TokenType.cpp
temp/WEEK 8/policy-dsl-compiler/src/semantic/: SymbolTable.cpp  TypeChecker.cpp
(+25 files in other folders)
